# emprestimos

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  teste.py
.github/workflows/: django.yml
app/: home_view.py  settings.py  test_home.py  urls.py
app/emprestimos/: apps.py  urls.py  views.py
app/emprestimos/templates/emprestimos/: home.html
app/emprestimos/tests/: test_tarefas_get.py
