[tool.poetry]
name = "emprestimos"
version = "0.1.0"
description = ""
authors = ["EvertonVaz <etovaz.web@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
Django = "^4.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
